added routerLinkActive classes

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <section class="menu">
   <h1>Menu</h1>
-  <a routerLink="/breeds">Breeds</a>
-  <a href="/contact">Contact Us</a>
+  <a routerLink="/breeds" routerLinkActive="active">Breeds</a>
+  <a routerLink="/contact"routerLinkActive="active">Contact Us</a>
 </section>
