--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -11,6 +11,9 @@ a{
   text-decoration: none;
   color: black;
 }
+.active {
+  border: 1px solid black;
+}
 
 a:hover {
   text-decoration: underline;
