--- a/src/app/components/breedlist/breedlist.component.css
+++ b/src/app/components/breedlist/breedlist.component.css
@@ -2,18 +2,22 @@
   display: flex;
   margin: 10px;
 }
-th,td{
+th,
+td {
   font-size: 0.75rem;
+  padding: 0.5rem;
 }
 td {
   cursor: pointer;
 }
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
   border-collapse: collapse;
 }
 
 td:hover {
-  color:blue;
+  color: blue;
   text-decoration: underline;
 }
